[blog] 블로그 이전에 따른 글 삭제

--- a/src/posts/1.md
+++ b/src/posts/1.md
@@ -1,18 +1,18 @@
 ---
-title: "안녕하시렵니까?"
+title: "모두들 안녕 ?"
 date: "2024-09-07"
 id: 1
 image: "/images/1.jpeg"
 category: "블로그"
 ---
 
-![블로그 이미지](/images/1.jpeg)
-
-안녕하시렵니까?
+안녕하세요 (꾸벅)
 
 개발하는 꼬망이입니다.
 
 <br/>
+
+사실 이 글은 모든 
 
 제가 왜 개발하는 꼬망인지 궁금하지 않으신가요?
 
