[blog] 블로그 이전에 따른 글 수정, 삭제

--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -1,20 +1,22 @@
 ---
-title: "이 블로그는 마크다운 기반의 블로그입니다."
+title: "블로그 자랑하기"
 date: "2024-09-08"
 id: 4
 image: "/images/4.jpg"
 category: "블로그"
 ---
 
-안녕하시렵니까?
+안녕하시와요? (꾸벅)
 
 개발하는 꼬망이입니다.
+
+지난 포스트에 이어 블로그 자랑을 해보겠습니다.
 
 <br/>
 
 사실 지금까지 마크다운 문법을 딱히 쓸 일이 없어서
 
-(사실 이미지나 줄바꿈 다 마크다운 및 HTMl 문법으로 구현했답니다)
+(사실 이미지나 줄바꿈 같은 것들은 다 마크다운 및 HTMl 문법으로 구현되어 있습니다)
 
 이 블로그가 마크다운 기반인지 다들 몰랐을 거예요.
 
@@ -24,11 +26,11 @@ category: "블로그"
 
 <br/>
 
-### 마크 다운 문법으로 글을 작성할 수 있는
+### 마크 다운 문법으로 글을 작성할 수 있는 (h3)
 
-## 아주 개 쩌는
+## 아주 개 쩌는 (h2)
 
-# 블로그랍니다. 우하하
+# 블로그랍니다. 우하하 (h1)
 
 <br/>
 
@@ -50,8 +52,8 @@ console.log("코드 블럭도 넣을 수 있죠")
 
 그냥 자랑하고 싶었습니다.
 
-이 기능을 활용해서 앞으로는 제가 힘들게 풀었던 문제나
+(코드 하이라이팅도 업데이트로 추가되었습니다.)
 
-소개 및 정리하고 싶은 알고리즘 정보도 올려보도록 하겠습니다.
+뭔가 업데이트 노트 같은 걸 써도 간지나겠군요.
 
-그럼 안녕 ~
+조만간 업데이트 해보겠습니다.
