--- a/src/posts/7.md
+++ b/src/posts/7.md
@@ -1,14 +1,14 @@
 ---
-title: "날씨와 할 일은 반비례한다"
+title: "날씨와 할 일은 반비례합니다."
 date: "2024-09-24"
-id: 7
+id: 6
 image: "/images/7.png"
 category: "일상"
 ---
 
 요즘 날씨가 많이 풀렸습니다.
 
-너무 더워서 길을 걸을 때마다 1보 3땀했는데
+너무 더워서 길을 걸을 때마다 1보 3땀했었는데
 
 바람이 불어 매우 시원합니다.
 
