--- a/src/posts/1.md
+++ b/src/posts/1.md
@@ -10,22 +10,20 @@ category: "블로그"
 
 개발하는 꼬망이입니다.
 
-<br/>
+나만의 무언가를 개발하고 싶어 프로그래밍을 시작한 지도 꽤 된 것 같은데
 
-사실 이 글은 모든 
+이제서야 개인 블로그를 만들어 오픈하게 되었네요 ...
 
-제가 왜 개발하는 꼬망인지 궁금하지 않으신가요?
+사실 처음 이 블로그를 만들 적에는 다양한 용도로 사용하려고 했었는데,
 
-이유는 비밀입니다.
+너무 짬뽕이 되는 듯한 느낌이 들어서 블로그를 용도에 따라 조금 나눠보았습니다.
 
-무튼 그런 게 있습니다.
+IT 관련 서적 리뷰는 [네이버 블로그](https://blog.naver.com/isegye_martiny)에,
 
-~~(망내가 나라다 진짜 망내 존나 귀여워)~~
+프로그래밍 관련 정보는 제가 개발한 또 다른 저의 [블로그](https://martin-island.com)에,
 
-<br/>
+그리고 이 곳은 일상, 덕질, TMI 등등 나 자신을 공유하는 공간으로 활용해보려고 합니다.
 
-이 블로그는 앞으로도 다양한 지식과 경험들을 공유하는 공간으로 활용해볼 예정입니다.
-
-그럼 이 꼬망이는 이만 물러나보도록 하겠습니다.
+조만간 아무 소식이나 들고 찾아뵙겠습니다.
 
 다들 나이스한 하루 보내세요 ~
