--- a/src/posts/1000.md
+++ b/src/posts/1000.md
@@ -7,6 +7,24 @@ category: "노래 추천"
 ---
 > 노래 제목을 클릭하면 유튜브에서 자동으로 재생됩니다.
 
+<br/>
+
+### 주인장 추천 플레이리스트
+
+<a href="https://youtu.be/JdRh_gVzlgg?si=qk9rVjw0ycZFeWk8"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 플레이리스트 1탄</h4>
+</a>
+
+<a href="https://youtu.be/31z4w0ti4v0?si=OIgsTcUtrrnfrQ0F"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 플레이리스트 2탄</h4>
+</a>
+
+<br/><br/>
+
 ### 🍯 허니즈 존
 
 <a href="https://youtu.be/mkV8DCpszLM?si=hALavLYF9mLScAO4"
@@ -21,6 +39,12 @@ style="color: inherit; text-decoration: none;">
 <h4>🎶 망내 - Pretender</h4>
 </a>
 
+<a href="https://youtu.be/8ZkVVRcN678?si=UcrDb61bffqpHIjv"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 망내 - 베텔기우스</h4>
+</a>
+
 <br/><br/>
 
 ### ✨ 이세계아이돌 존
@@ -29,6 +53,12 @@ style="color: inherit; text-decoration: none;">
 target="_blank"
 style="color: inherit; text-decoration: none;">
 <h4>🎶 이세계아이돌 - RE:WIND</h4>
+</a>
+
+<a href="https://youtu.be/YpCpF_CD2pM?si=qGanbyeAzJNcrRTI"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 아이네 - 와스레모노</h4>
 </a>
 
 <a href="https://youtu.be/8XMdOV37ICw?si=sHdwXgkBrqQZE4t0"
@@ -46,6 +76,24 @@ style="color: inherit; text-decoration: none;">
 <br/><br/>
 
 ### 💎 스텔라이브 존
+
+<a href="https://youtu.be/_8uoathMY0A?si=bIaDxeXPzcCEiWEe"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 네네코 마시로 - 봄꿈</h4>
+</a>
+
+<a href="https://youtu.be/0nVQggWAzyE?si=ddZAHadW0cZNOFny"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 네네코 마시로 - 츄 다양성</h4>
+</a>
+
+<a href="https://youtu.be/O1MqvWf7q58?si=PIBXse2lkJYqGEp9"
+target="_blank"
+style="color: inherit; text-decoration: none;">
+<h4>🎶 아오쿠모 린 - 무희</h4>
+</a>
 
 <a href="https://youtu.be/rQaluJS-Tc0?si=pbJM2oDk3wBg1ciw"
 target="_blank"
