--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -1,20 +1,20 @@
 ---
-title: "마송고등학교에 디지털 새싹 교육을 다녀왔습니다."
+title: "마송고등학교로 디지털 새싹 강의를 다녀왔습니다."
 date: "2024-09-07"
 id: 2
 image: "/images/2.jpeg"
-category: "강의, 일상, 디지털 새싹"
+category: "일상, 디지털 새싹"
 ---
 
 ![블로그 이미지](/images/2.jpeg)
 
-안녕하시렵니까?
+안녕하시와요. ~~(아오니입니다.)~~
 
 개발하는 꼬망이입니다.
 
 <br/>
 
-어제와 그저께, 디지털 새싹 교육을 위해 김포에 있는 마송고등학교에 다녀왔습니다.
+어제와 그저께, 마송고등학교로 디지털 새싹 교육을 하고 왔습니다.
 
 중학교와 고등학교가 붙어 있어, 굉장히 넓더군요.
 
@@ -24,9 +24,9 @@ category: "강의, 일상, 디지털 새싹"
 
 <br/>
 
-혹시나 학생들이 너무 어려워 과정을 잘 못 따라오면 어쩌나 싶었는데,
+혹시나 학생들에게 너무 어려워 과정을 잘 못 따라오면 어쩌나 싶었는데,
 
-고등학교 1학년 학생 스무 명이 너무 고맙게도 수업에 열심히 참여해주었습니다.
+고등학교 1학년임에도 불구하고 너무 고맙게도 수업에 열심히 참여해주었습니다.
 
 <br/>
 
@@ -34,14 +34,14 @@ openCV 기반의 AI 로봇 팔을 만드는 것이 수업의 컨텐츠였는데,
 
 학생들이 아두이노에 연결된 조이스틱으로 로봇 팔을 움직이며 신기해하는 걸 보니
 
-저도 프로그래밍을 처음 접했을 떄의 기억이 새록새록 났습니다.
+저도 프로그래밍을 처음 접했을 때의 신기해했던 기억이 새록새록 났습니다.
 
 <br/>
 
-교육이 모두 끝나고는 인싸 친구들과 귀여운 꼬마 친구들한테 인스타도 따였습니다.
+교육이 모두 끝나고서는 인싸 친구들과 귀여운 친구들한테 인스타도 따였습니다.
 
-우리 학원 애들한테도 인스타는 주지 않는 게 원칙인데,, 
+우리 학원 친구들한테도 인스타 아이디는 안 줬는데,, 
 
-올해 첫 디삭 수업이라 편하게 진로 상담 및 질의응답하라고 줬습니다.
+올해 첫 디삭 수업이기도 하고, 그 동안 좀 친해져서 진로 상담하라고 줬습니다.
 
-마송고등학교 학생 분들 모두들 수고 많았습니다 :)
+마송고등학교 학생 분들 모두 수고 많았습니다 :)
