--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -1,12 +1,12 @@
 ---
-title: "개인 블로그를 가지고 싶었던 이유"
+title: "개인 블로그를 만들고 싶었던 이유"
 date: "2024-09-08"
 id: 3
 image: "/images/3.png"
 category: "블로그, 일기"
 ---
 
-안녕하시렵니까?
+안녕하시와요? (꾸벅)
 
 개발하는 꼬망이입니다.
 
@@ -18,11 +18,11 @@ category: "블로그, 일기"
 
 저도 유행을 따라 티스토리나 벨로그를 운영해보긴 했습니다.
 
-다만 스타벅스 다이어리를 얻기는 힘들지만
+'올해는 갓생 살아야지' 라며 다이어리를 사기는 쉽지만
 
-얻고 나면 열심히 안 쓰는 것처럼
+사고 나면 막상 열심히 안 쓰는 것처럼
 
-블로그를 꾸준히 열심히 쓰기란 어렵더군요.
+블로그에 꾸준히 글을 올리기란 어렵더군요.
 
 <br/>
 
@@ -32,10 +32,6 @@ category: "블로그, 일기"
 
 이야기는 달라질 수도 있지 않을까요?
 
-~~물론 지금은 개발 초창기라서 열심히 쓰는 걸지도~~
-
-(그래서 아직 미완성이 상태입니다, 일단 열심히 굴리는 중)
-
 <br/>
 
 이 블로그는 "제가" 만든 블로그입니다. (우쭐)
@@ -44,7 +40,7 @@ category: "블로그, 일기"
 
 chatGPT 조수와 함께 만들었습니다.
 
-(리팩토링하거나 오류 수정할 때 좋습니다.)
+(리팩토링하거나 오류 수정할 때 일 시키기 좋습니다.)
 
 <br/>
 
@@ -54,7 +50,7 @@ chatGPT 조수와 함께 만들었습니다.
 
 그래서 제일 중요한 WHY? 에 대답해보자면,
 
-간지나잖아요.
+>> ### "간지나잖아요."
 
 인생은 간지로 사는 겁니다. (그러시면 안됩니다.)
 
@@ -64,19 +60,21 @@ chatGPT 조수와 함께 만들었습니다.
 
 늘 저만의 것을 만들고 싶다는 욕심이 있었습니다.
 
-아 내가 저거 만들면 이 기능은 빼고 이 기능은 넣을텐데 ~
+"아 내가 저거 만들면 이 기능은 빼고 이 기능은 넣을텐데 ~"
 
-그런 욕심이 저를 IT를 전공하게 만든 것 같습니다.
+그런 욕심이 저를 IT 분야 전공을 하게 만든 것 같습니다.
 
 <br/>
 
-근데 저는 사실 개발보다는 기획을 잘합니다.
+사실 근데 저는 개발보다는 기획을 잘합니다. (엥?)
 
 기획을 잘 하기 위해 개발을 배우는 것도 없지 않아 있는 것 같습니다.
 
 그렇다고 개발을 배운 것에 후회는 하지 않습니다.
 
 여러모로 도움이 되고 있는 친구거든요.
+
+기획할 때 개발을 모르면 비현실적인 망상 기획충이 되버립니다.
 
 <br/>
 
@@ -86,4 +84,4 @@ chatGPT 조수와 함께 만들었습니다.
 
 길면 읽기 싫기 때문입니다.
 
-그래서 말인데, 블로그의 특징은 다음 포스트에서 소개해보도록 하죠.
+그래서 말인데, 블로그 자랑은 다음 포스트에서 해볼게요.
