[blog] 블로그 수정

--- a/src/posts/8.md
+++ b/src/posts/8.md
@@ -1,61 +1,87 @@
 ---
-title: "한 달 간 블로그를 운영하면서 느낀 점"
-date: "2024-10-20"
+title: "11월의 어느 날."
+date: "2024-11-17"
 id: 8
-image: "/images/8.jpg"
-category: "일상, 블로그"
+image: "/images/8.png"
+category: "일상"
 ---
 
-어느덧 블로그를 운영한 지 한 달이 되어갑니다.
+벌써 11월이 되었습니다.
 
-블로그를 운영하면서 많은 업데이트를 진행해왔습니다.
+많은 변화가 생기는 달이예요.
 
-일단 태그 분류 기능을 만든 것도 그렇고, 업로드하는 코드에는 하이라이팅 기능도 생겨
+먼저, 저는 대학원을 갑니다.
 
-이제는 어여쁜 코드의 자태를 감상할 수 있습니다.
+병역 문제도 빨리 해결을 해야하기 때문에 타대 안가고 자대 선택했습니다.
 
-근데, 이제 제가 보기에는 말이죠. 포지션이 애매합니다.
+그리고, 저는 이제 동아리의 기장 자리에서 물러납니다.
 
-TMI적 일상과 덕질, 강의 관련 포스트가 한 곳에 모이면서 정말 애매해진 것 같습니다.
+물론 이제는 기장이 아닌 총책임자라 그게 그거 아닌가 싶지만,
 
-그래서 이제는 포지션을 나누어 블로그를 운영하고자 합니다.
+중대한 사안이나 면접이 아니면 손을 떼려고 합니다.
 
-일단 이 곳은 제 일상 TMI와 책 리뷰를 올리려고 합니다.
+자립해야죠 우리 동아리도.
 
-물론 일상 TMI이기 때문에 제 덕질과 관련된 부분도 일부 업로드될 것 같습니다.
+제가 만든 동아리, 무너지지는 않게끔 서포트해주는 역할을 하려 합니다.
 
-아직 오지 않은 굿즈들이 많기 때문에, 다 리뷰해봐야합니다. 하하
+지금 이걸 쓰고 있는 지금 저는 사실 되게 되게 중요한 사람을 만나러 갑니다.
 
-아, 그리고 책 리뷰는 [네이버 블로그](https://blog.naver.com/isegye_martiny)에도 업로드할 생각입니다.
+바로 망내와 담유이입니다.
 
-새로 나오는 책들을 서평단이 되어 리뷰해보고 싶은데, 
+담유이는 사실 이 글을 쓸 시점을 기준으로 얘기하자면 이미 만났습니다.
 
-그러기 위해서는 현재 가지고 있는 책들부터 리뷰하면서 포스트를 올려보면 어떨까 싶더라구요.
+만나서 이런 저런 얘기를 해주고 싶었는데,
 
-강의와 관련된 포스트는 모두 [Martin Island](https://martin-island.com)라는 새로운 사이트를 제작하여 업로드해보면 어떨까 싶습니다.
+너무 떨려서 얘기를 못했습니다.
 
-이를 위해 해당 사이트를 만들기 위한 포맷을 계승하여 개발자틱한 사이트를 만들까 합니다.
+내가 좋아하는 사람이 나랑 1:1로 대화한다는 게 얼마나 좋은 건지 모르시죠?
 
-일단 막학기의 중간고사부터 해치우고 시작하고자 합니다. 
+근데 팬미팅 시간이 너무 짧습니다.
 
-별로 떨리거나 이해가 안되는 것은 없는데, 못 보면 쪽팔리니까요.
+그치만 기분이 좋았습니다.
 
-그리고 사실 기말도 준비해야 합니다. 기말은 금용수학개론만 공부하면 됩니다.
+유이가 저를 귀여워해줬습니다.
 
-아 그리고 참고로 강의 사이트에 금융수학개론 내용도 업로드 예정입니다.
+저보고 백이라고 불러줬습니다.
 
-책을 하나 사서 공부할까도 고민 중입니다... 은근 도움 될 것 같더군요.
+신납니다.
 
-학생들이 대학 입시 시즌이라 국내도, 해외도 대비해주느라 바쁩니다.
+무튼 망내를 만나게 되면 이야기를 최대한 많이 하려고 합니다.
 
-영재원 면접도 겹쳐서 더 고되군요..
+블로그의 존재부터 망내에게 얼마나 고마움을 많이 느끼는지 등등
 
-아 맞다 정말 제 블로그 글은 의식의 흐름으로 작성되곤 하는데,
+이것저것 얘기해주려고 합니다.
 
-담유이님이 제가 듀엣하면 구경하러 오신다고 합니다.
+근데 점점 가면 갈수록 이 블로그는 아무말 대잔치가 되어가는 것 같습니다.
 
-그래서 시험 끝나면 녹음부터 할 겁니다.
+사실 이런 용도로 쓰려고 한 게 맞습니다.
 
-그럼 이만 다시 공부를 하러 떠나보겠습니다.
+제 속마음을 풀어놓을 장소가 있다는 게 얼마나 좋습니까?
 
-다들 꼬마워요 ~ ㅋㅋㅋㅋㅋ
+무튼 그렇습니다.
+
+아 그리고 이제 다이어트를 해야할 것 같습니다.
+
+심각합니다.
+
+제가 어제 체중계를 사서 집에 도착했습니다.
+
+제 몸무게는 저만 보고 싶기 때문입니다.
+
+그래서 제 방에 뒀습니다.
+
+근데 몸무게를 재보니 신기록을 찍었습니다.
+
+사실은 매번 잴 때마다 신기록이라 이제는 놀랍지도 않습니다.
+
+방치되었던 줄넘기를 내일부터 해보고자 합니다.
+
+내일 대학원 면접인데 아침에 줄넘기를 하려면 힘들 것 같긴 합니다.
+
+그러나 해야합니다. 왜냐하면 신기록을 더 이상 찍고 싶지 않기 때문입니다.
+
+다이어트 일기도 여기에 적어보도록 하겠습니다.
+
+그럼 오늘도 나이스한 하루 보내시기 바랍니다.
+
+모두들 안녕 ~
