--- a/src/posts/7.md
+++ b/src/posts/7.md
@@ -1,77 +1,61 @@
 ---
-title: "날씨와 할 일은 반비례합니다."
-date: "2024-09-24"
-id: 6
-image: "/images/7.png"
-category: "일상"
+title: "한 달 간 블로그를 운영하면서 느낀 점"
+date: "2024-10-20"
+id: 7
+image: "/images/7.jpg"
+category: "일상, 블로그"
 ---
 
-요즘 날씨가 많이 풀렸습니다.
+어느덧 블로그를 운영한 지 한 달이 되어갑니다.
 
-너무 더워서 길을 걸을 때마다 1보 3땀했었는데
+블로그를 운영하면서 많은 업데이트를 진행해왔습니다.
 
-바람이 불어 매우 시원합니다.
+일단 태그 분류 기능을 만든 것도 그렇고, 업로드하는 코드에는 하이라이팅 기능도 생겨
 
-정말 한강을 가고 싶은 날씨더군요.
+이제는 어여쁜 코드의 자태를 감상할 수 있습니다.
 
-한강 가서 피크닉 하면서 도시락 먹고 싶습니다.
+근데, 이제 제가 보기에는 말이죠. 포지션이 애매합니다.
 
-그나저나 할 일은 많습니다.
+TMI적 일상과 덕질, 강의 관련 포스트가 한 곳에 모이면서 정말 애매해진 것 같습니다.
 
-왜 날씨는 좋은데 할 일은 많은걸까요?
+그래서 이제는 포지션을 나누어 블로그를 운영하고자 합니다.
 
-곧 마지막 중간고사를 앞두고 있습니다.
+일단 이 곳은 제 일상 TMI와 책 리뷰를 올리려고 합니다.
 
-졸업까지 얼마 안 남았단 소리죠.
+물론 일상 TMI이기 때문에 제 덕질과 관련된 부분도 일부 업로드될 것 같습니다.
 
-시험 두 번만 더 보면 이제 졸업합니다.
+아직 오지 않은 굿즈들이 많기 때문에, 다 리뷰해봐야합니다. 하하
 
-좋은 일인지 잘 모르겠네요.
+아, 그리고 책 리뷰는 [네이버 블로그](https://blog.naver.com/isegye_martiny)에도 업로드할 생각입니다.
 
-그래서 중간고사 준비를 해야합니다.
+새로 나오는 책들을 서평단이 되어 리뷰해보고 싶은데, 
 
-제가 해야한다고 적은 이유는 아직 안 했다는 소리겠죠?
+그러기 위해서는 현재 가지고 있는 책들부터 리뷰하면서 포스트를 올려보면 어떨까 싶더라구요.
 
-너무 귀찮습니다.
+강의와 관련된 포스트는 모두 [Martin Island](https://martin-island.com)라는 새로운 사이트를 제작하여 업로드해보면 어떨까 싶습니다.
 
-수학은 좋은데 싫습니다.
+이를 위해 해당 사이트를 만들기 위한 포맷을 계승하여 개발자틱한 사이트를 만들까 합니다.
 
-배울 때 간지나니까 좋은데요,
+일단 막학기의 중간고사부터 해치우고 시작하고자 합니다. 
 
-이해하기 어려워서 싫습니다.
+별로 떨리거나 이해가 안되는 것은 없는데, 못 보면 쪽팔리니까요.
 
-막학기까지 저는 수학을 하고 있습니다.
+그리고 사실 기말도 준비해야 합니다. 기말은 금용수학개론만 공부하면 됩니다.
 
-고딩 때는 수학을 정말 하기 싫었는데
+아 그리고 참고로 강의 사이트에 금융수학개론 내용도 업로드 예정입니다.
 
-요즘은 수학과 살고 있습니다.
+책을 하나 사서 공부할까도 고민 중입니다... 은근 도움 될 것 같더군요.
 
-아직도 수학은 제 길이 아닌 것 같긴 합니다.
+학생들이 대학 입시 시즌이라 국내도, 해외도 대비해주느라 바쁩니다.
 
-계산이 너무 어렵습니다.
+영재원 면접도 겹쳐서 더 고되군요..
 
-멍청해서 그런 것 같긴 합니다.
+아 맞다 정말 제 블로그 글은 의식의 흐름으로 작성되곤 하는데,
 
-정말 아무 말이나 쓰는 블로그네요.
+담유이님이 제가 듀엣하면 구경하러 오신다고 합니다.
 
-이러려고 블로그 만든 건 맞습니다.
+그래서 시험 끝나면 녹음부터 할 겁니다.
 
-아 그리고 졸업하려면 영어 인증이 필요한데,
+그럼 이만 다시 공부를 하러 떠나보겠습니다.
 
-오픽 책을 사놓은지 일주일 째,
-
-펼쳐보지도 않았습니다.
-
-오늘은 좀 펼쳐볼까 고민 중입니다.
-
-그래도 오픽 시험을 10월 가기 전에는 봐야하지 않을까라는 생각을 합니다.
-
-블로그에 이제 기술 글도 쓸 예정인데,
-
-일상과 기술을 좀 분리해야하나 고민 중입니다.
-
-이렇게 아무 말이나 하다가 갑자기 똑똑한 척 하면
-
-좀 그럴 것 같습니다.
-
-그럼 오늘도 나이스한 하루 보내시기 바랍니다.
+다들 꼬마워요 ~ ㅋㅋㅋㅋㅋ
